<resources>
    <string name="app_name">FSClock</string>
    <string name="mark_width">刻度粗细:</string>
    <string name="mark_length">刻度长度:</string>
    <string name="mark_quarter_color">刻度线颜色(一刻钟):</string>
    <string name="mark_min_color">刻度线颜色(五分钟):</string>
    <string name="pointer_hour_color">时针颜色:</string>
    <string name="pointer_min_color">分针颜色:</string>
    <string name="pointer_sec_color">秒针颜色:</string>
    <string name="pointer_hour_width">时针宽度:</string>
    <string name="pointer_min_width">分针宽度:</string>
    <string name="pointer_sec_width">秒针宽度:</string>
    <string name="pointer_center">指针圆心:</string>
    <string name="dial_color">表盘颜色:</string>
    <string name="dial_solid">表盘实心:</string>
    <string name="dial_num_radius">数字中心距:</string>
    <string name="num_size">数字大小</string>
    <string name="num_color">数字颜色</string>
    <string name="mark_gap">刻度距离:</string>
    <string name="url">地址URL:</string>

    <string name="hint_mark_width">调整表盘刻度线的宽度</string>
    <string name="hint_mark_length">调整表盘刻度线的长度</string>
    <string name="hint_mark_quarter_color">调整每一刻钟刻度的颜色</string>
    <string name="hint_mark_min_color">调整其他刻度的颜色</string>
    <string name="hint_pointer_hour_color">调整时针颜色</string>
    <string name="hint_pointer_min_color">调整分针颜色</string>
    <string name="hint_pointer_sec_color">调整秒针颜色</string>
    <string name="hint_pointer_hour_width">调整时针宽度</string>
    <string name="hint_pointer_min_width">调整分针宽度</string>
    <string name="hint_pointer_sec_width">调整秒针宽度</string>
    <string name="hint_pointer_center">是否启用指针圆心</string>
    <string name="hint_dial_color">调整表盘颜色</string>
    <string name="hint_dial_solid">设置表盘实心/仅外圈</string>
    <string name="hint_dial_num_radius">调整表盘数字(中心)到圆心的距离</string>
    <string name="hint_num_size">调整表盘数字大小</string>
    <string name="hint_num_color">调整表盘数字颜色</string>
    <string name="ana_setbutton_desc">模拟时钟设置</string>
    <string name="mark_gap_hint">调整刻度线与表盘边缘的距离</string>
    <string name="monitor_button_desc">监控设置</string>
    <string name="url_hint">输入电脑的IP地址</string>
    <string name="monitor_refresh_button_desc">刷新监控页面</string>
    <!-- Preference Titles -->
    <string name="screen_header">屏幕设置</string>
    <string name="other_settings_header">其它</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="home_screen_title">主屏幕</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="cover_system_brightness_summary_on">使用APP内建的亮度策略
    </string>
    <string name="cover_system_brightness_summary_off">启用系统自动亮度</string>
    <string name="need_restart">重启后生效</string>
    <string name="disp_dial_num">显示表盘数字</string>
    <string name="back_color">背景颜色</string>
    <string name="hint_back_color">调整背景颜色，重启后生效</string>

</resources>