<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dial_color">
            </TextView>

            <EditText
                android:id="@+id/dial_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="调整表盘颜色"
                android:hint="@string/hint_dial_color"
                android:inputType="number"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark_width">
            </TextView>

            <EditText
                android:id="@+id/mark_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="调整表盘刻度线的宽度"
                android:hint="@string/hint_mark_width"
                android:inputType="number"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark_length">
            </TextView>

            <EditText
                android:id="@+id/mark_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="调整表盘刻度线的长度"
                android:hint="@string/hint_mark_length"
                android:inputType="number"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark_quarter_color">
            </TextView>

            <EditText
                android:id="@+id/mark_quarter_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="调整每一刻钟刻度的颜色"
                android:hint="@string/hint_mark_quarter_color"
                android:inputType="number"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark_min_color">
            </TextView>

            <EditText
                android:id="@+id/mark_min_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="调整其他刻度的颜色"
                android:hint="@string/hint_mark_min_color"
                android:inputType="number"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pointer_hour_color">
            </TextView>

            <EditText
                android:id="@+id/pointer_hour_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="调整时针颜色"
                android:hint="@string/hint_pointer_hour_color"
                android:inputType="number"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pointer_min_color">
            </TextView>

            <EditText
                android:id="@+id/pointer_min_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="调整分针颜色"
                android:hint="@string/hint_pointer_min_color"
                android:inputType="number"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pointer_sec_color">
            </TextView>

            <EditText
                android:id="@+id/pointer_sec_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="调整秒针颜色"
                android:hint="@string/hint_pointer_sec_color"
                android:inputType="number"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pointer_center" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Switch>
        </LinearLayout>


    </LinearLayout>
</ScrollView>